.ini überarbeitete -> anstatt von 0 und 1 für vorhanden oder nicht vorhanden -> true and falsegit status \n    kleine Aenderungen an den build-Klassen -> jedes MQTT-Thing hat keine eigenes Topic mehr sondern alle zusammengehörenden das selbe! \n   Der MQTT-Loader um die Performance unter last zu Testen ist nun Apache JMeter mit Hilfe des MQTT Plugins!