@@ -2,30 +2,39 @@ package openhabConfiguration;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.StreamCorruptedException;
+import java.util.logging.Logger;
 
 public class startCmdPublisher {
 
-    private static int NUMBER_TEMPERATUR = Integer.parseInt(getConfigurations.getConfigs("perApartment", "temperature"));
-    private static int NUMBER_HUMIDITY = Integer.parseInt(getConfigurations.getConfigs("perApartment", "humidity"));
-    private static int NUMBER_ELECTRICITY = Integer.parseInt(getConfigurations.getConfigs("perApartment", "electricity"));
-    private static int NUMBER_HEATER = Integer.parseInt(getConfigurations.getConfigs("perApartment", "heater"));
+    private static boolean NUMBER_TEMPERATUR = Boolean.parseBoolean(getConfigurations.getConfigs("perApartment", "temperature"));
+    private static boolean NUMBER_HUMIDITY = Boolean.parseBoolean(getConfigurations.getConfigs("perApartment", "humidity"));
+    private static boolean NUMBER_ELECTRICITY = Boolean.parseBoolean(getConfigurations.getConfigs("perApartment", "electricity"));
+    private static boolean NUMBER_HEATER = Boolean.parseBoolean(getConfigurations.getConfigs("perApartment", "heater"));
     private static int NUMBER_APARTMENTS = Integer.parseInt(getConfigurations.getConfigs("apartment", "number"));
 
-    private static File dir = new File("src/main/resources/PublisherAndSubscriber");
+    private static File dir = new File("D:\\BA-Repo\\ba-scalability-openhab\\src\\main\\resources\\PublisherAndSubscriber\\");
+    private static Logger logger = Logger.getLogger(Logger.GLOBAL_LOGGER_NAME);
 
     public static boolean startPublisher(){
 
         try {
 
-            if(NUMBER_TEMPERATUR > 0){
+            if(NUMBER_TEMPERATUR){
                 for(int i = 1; i <= NUMBER_APARTMENTS; i++) {
-                    ProcessBuilder pbTemp = new ProcessBuilder("cmd", "/c", "publishTemperature.bat " + i);
+
+                    Process process;
+                    process = Runtime.getRuntime().exec("cmd /c D:\\BA-Repo\\ba-scalability-openhab\\src\\main\\resources\\PublisherAndSubscriber\\publishTemperature.bat ");
+                    process.destroy();
+                    process.waitFor();
+
+                    /*ProcessBuilder pbTemp = new ProcessBuilder("cmd", "/c", "publishTemperature.bat " + i);
                     pbTemp.directory(dir);
-                    pbTemp.start();
+                    pbTemp.start();*/
                 }
             }
 
-            if(NUMBER_HUMIDITY > 0){
+            if(NUMBER_HUMIDITY){
                 for(int i = 1; i <= NUMBER_APARTMENTS; i++) {
                     ProcessBuilder pbHum = new ProcessBuilder("cmd", "/c", "publishHumidity.bat " + i);
                     pbHum.directory(dir);
@@ -33,7 +42,7 @@ public class startCmdPublisher {
                 }
             }
 
-            if(NUMBER_ELECTRICITY > 0){
+            if(NUMBER_ELECTRICITY){
                 for(int i = 1; i <= NUMBER_APARTMENTS; i++) {
                     ProcessBuilder pbElec = new ProcessBuilder("cmd", "/c", "publishElectricity.bat " + i);
                     pbElec.directory(dir);
@@ -41,7 +50,7 @@ public class startCmdPublisher {
                 }
             }
 
-            if(NUMBER_HEATER > 0){
+            if(NUMBER_HEATER){
                 for(int i = 1; i <= NUMBER_APARTMENTS; i++) {
                     ProcessBuilder pbHeat = new ProcessBuilder("cmd", "/c", "subscribeHeater.bat " + i);
                     pbHeat.directory(dir);
@@ -50,7 +59,7 @@ public class startCmdPublisher {
             }
 
             return true;
-        } catch (IOException e) {
+        } catch (IOException | InterruptedException e) {
             e.printStackTrace();
             return false;
         }
